--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
             <artifactId>weka-stable</artifactId>
             <version>3.6.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.james</groupId>
+            <artifactId>apache-mime4j</artifactId>
+            <version>0.6.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
